--- a/Template/todo/index.html
+++ b/Template/todo/index.html
@@ -8,8 +8,19 @@
   </head>
   <body>
     <div class="container">
-      <div class="header"></div>
-      <div class="body">
+      <div class="header">
+        <div class="logo">
+          <img src="public/logo.png" alt="">
+        </div>
+        <div class="search">
+          <input type="text">
+          <div class="profile">
+            <img src="public/notification.png" alt="">
+            <img src="public/profile.jpg" alt="">
+          </div>
+        </div>
+      </div>
+      <div class="body">  
         <div class="sidebar">
           <button class="dashboard highlight-btn">Dashboard</button>
           <button class="issues">Issues</button>
