--- a/Template/todo/index.html
+++ b/Template/todo/index.html
@@ -10,13 +10,16 @@
     <div class="container">
       <div class="header">
         <div class="logo">
-          <img src="public/logo.png" alt="">
+          <img src="/logo.png" alt="">
         </div>
         <div class="search">
-          <input type="text">
+          <div class="input-part">
+            <img src="/search.png" alt="">
+            <input type="text" placeholder="Search..">
+          </div>
           <div class="profile">
-            <img src="public/notification.png" alt="">
-            <img src="public/profile.jpg" alt="">
+            <img src="/notification.png" alt="">
+            <img src="/profile.jpg" alt="">
           </div>
         </div>
       </div>
