--- a/Template/todo/src/style.css
+++ b/Template/todo/src/style.css
@@ -42,12 +42,36 @@ html, body {
   
 }
 
-.search input{
-  border: 1px solid gainsboro;
+.search .input-part{
   width: 70%;
   height: 60%;
   border-radius: 2px;
   margin-left: 1.5vw;
+  font-size: medium;
+  display: flex;
+  gap: 0.3px;
+  justify-content: start;
+  align-items: center;
+}
+
+.search .input-part img{
+  width: 4%;
+  height: 60%;
+}
+
+.search .input-part input{
+  width: 95%;
+  height: 90%;
+  padding: 0px 15px;
+  font-size: medium;
+  border: none;
+}
+
+.search .input-part input:focus,
+.search .input-part input:active
+{
+  outline: none;
+  border: none;
 }
 
 .search .profile{
@@ -59,7 +83,7 @@ html, body {
 
 .search .profile img{
   border-radius: 30px;
-  width: 20%;
+  width: 15%;
   height: 100%;
 }
 
