--- a/Template/async-fetch-prc/index.html
+++ b/Template/async-fetch-prc/index.html
@@ -7,6 +7,13 @@
     <title>Vite + TS</title>
   </head>
   <body>
+    <label for="pet-select">Filter priority</label>
+    <select name="priority" id="priority-select">
+      <option value="all">All</option>
+      <option value="High">High</option>
+      <option value="Medium">Medium</option>
+      <option value="Low">Low</option>
+    </select>
     <div id="container"></div>
     <script type="module" src="/src/main.ts"></script>
   </body>
