--- a/Template/async-fetch-prc/src/style.css
+++ b/Template/async-fetch-prc/src/style.css
@@ -1,7 +1,7 @@
 body, html{
   margin: 0;
   height: 100%;
-  width: 100%;
+  width: 100%;background: linear-gradient(90deg, rgba(255, 255, 255, 1) 0%, rgba(237, 237, 237, 1) 35%, rgba(227, 227, 227, 1) 100%);
 }
 
 #container{
@@ -11,8 +11,6 @@ body, html{
   gap: 2vw;
   align-items: center;
   justify-content: center;
-  background: #ffffff;
-  background: linear-gradient(90deg, rgba(255, 255, 255, 1) 0%, rgba(237, 237, 237, 1) 35%, rgba(227, 227, 227, 1) 100%);
 }
 
 .todo-card{
@@ -41,8 +39,8 @@ body, html{
   border-radius: 4px;
   height: auto;
   width: auto;
-  background: #cfa4db;
-  background: linear-gradient(90deg, rgba(207, 164, 219, 0.8) 0%, rgba(160, 83, 237, 1) 100%);
+  background: #c1c1f5;
+  background: linear-gradient(90deg, rgba(193, 193, 245, 0.89) 0%, rgba(102, 102, 179, 1) 50%, rgba(85, 94, 194, 1) 100%);
   color: rgb(255, 241, 241);
 }
 
