--- a/Template/async-fetch-prc/details.html
+++ b/Template/async-fetch-prc/details.html
@@ -6,7 +6,7 @@
   <title>Document</title>
 </head>
 <body>
-  <div class="details"></div>
+  <div class="container"></div>
   <script type="module" src="/src/details.ts"></script>
 </body>
 </html>
